react-helmet reorganized

--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -1113,6 +1113,10 @@ body {
     max-width: 1200px !important;
 }
 
+.mediumWidth {
+    max-width: 650px !important;
+}
+
 .bigCardBody {
     font-size: 70%;
     font-weight: 400;
