new icons added

--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -1029,6 +1029,12 @@ body {
 
 
 //icons sizes
+.icon18 {
+    pointer-events: none;
+    width: 18px;
+    height: 18px;
+}
+
 .icon24 {
     pointer-events: none;
     width: 24px;
