--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -870,9 +870,9 @@ body {
 
 //overflow styles
 .overflowing {
-    overflow-x: auto; 
-    overflow-y: hidden;
-    width: 100%; 
+    overflow-x: auto !important; 
+    overflow-y: hidden !important; 
+    max-width: 100vw !important; 
 }
 
 .overflowingxy {
@@ -881,6 +881,25 @@ body {
     width: 100% !important; 
     max-height: 400px !important;
 }
+
+.overflowingy {
+    overflow-x: hidden;
+    overflow-y: auto !important; 
+    max-height: 400px !important;
+}
+
+
+.overflowingx {
+    overflow-x: auto !important; 
+    max-height: 400px !important;
+    overflow-y: hidden !important; 
+}
+
+
+
+
+
+
 
 //buttons
 .customButton.btn.btn-primary.btn-sm {
@@ -1088,6 +1107,10 @@ body {
     height: fit-content;
 }
 
+.matrixColor {
+    background-color:#e9ecef;
+}
+
 .tableFixHead          {  overflow-y: auto; height: 100px;  }
 .tableFixHead thead th { position: sticky; top: 0; z-index: 2; }
 
@@ -1140,6 +1163,11 @@ body {
 
 
 //icons sizes
+.icon16 {
+    width: 16px;
+    height: 16px;
+}
+
 .icon18 {
     width: 18px;
     height: 18px;
@@ -1219,10 +1247,55 @@ body {
     
     background-color: #fff;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    
-   width: 800px !important;
-
 }
+
+
+.bubbleText {
+    border: solid;
+    border-radius: 6px 6px 6px 6px;
+    border-width: 0.5px;
+    border-color:  rgba(0, 0, 0, 0.295) ;
+
+    text-align: justify !important;
+        text-justify: inter-word !important;
+    
+    background-color: #fff;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    max-width: 320px;
+}
+
+//advisor
+.posAbs {
+    position: absolute !important;
+    right: 0px;
+}
+
+.posAbsR {
+    position: absolute !important;
+    right: -15px;
+    top: -7px;
+}
+
+.posAbsB {
+    position: absolute !important;
+    bottom: 25px;
+}
+
+.posRel {
+    position:relative;
+}
+
+
+.w64 {
+    width: 64px;
+}
+
+
+.willow {
+    height:260px;
+    width: 258px;
+}
+
 
 .bigWidth {
     max-width: 800px !important;
@@ -1236,6 +1309,10 @@ body {
 }
 .mediumWidth {
     max-width: 620px !important;
+}
+
+.smallWidth {
+    max-width: 560px !important;
 }
 
 .bigCardBody {
