--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -1331,6 +1331,10 @@ body {
     max-width: 800px !important;
 }
 
+.veryBig {
+    max-width: 1000px !important;
+}
+
 .superBig {
     max-width: 1200px !important;
 }
