--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -169,7 +169,7 @@
         background-color: #EE4840;
         &.text {
             background-color: #EE4840;
-            color: black;
+            color: rgb(255, 255, 255);
         }
     }
     &.color6 {
@@ -1003,7 +1003,6 @@ body {
 .newsBody {
     background-color:rgba(244, 252, 255, 0.95);
     border-radius: 4px 4px 4px 4px;
-
 }
 
 .singleNews {
@@ -1198,6 +1197,8 @@ body {
     height: 16px;
 }
 
+
+
 .icon18 {
     width: 18px;
     height: 18px;
@@ -1347,6 +1348,10 @@ body {
 
 .smallWidth {
     max-width: 560px !important;
+}
+
+.verySmallWidth {
+    max-width: 450px !important;
 }
 
 .bigCardBody {
@@ -1610,4 +1615,46 @@ linkText:hover
      color:#00A0C6; 
      text-decoration:none; 
      cursor:pointer;  
+}
+
+.pveMove {
+    padding: 0rem 0.2rem 0rem 0.2rem ;
+    font-weight: bolder;;
+    border-radius: 5px;
+}
+
+.hpBack{
+    
+    position: relative;
+    max-width: 400px; 
+    height: 6px; 
+    background-color: grey;
+
+    overflow: hidden;
+
+    border-radius: 4px;
+}
+
+.hpFront {
+    position: absolute;
+    height: 100%; 
+    background-color: #02d86d;
+    transition: all 0.4s linear;
+    
+}
+
+.hpBound {
+    position: absolute;
+    height: 100%; 
+    border-left: 2px solid red;
+    border-right: 2px solid red;
+    transition: all 0.4s linear; 
+
+    background: repeating-linear-gradient(
+  45deg,
+  #606cbc00,
+  #606cbc00 2px,
+  red 2px,
+  red 4px
+);
 }
