Hotfixed: buttons size, spaces, translation

--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -1704,3 +1704,8 @@ linkText:hover
 .boostColor {
     color: rgb(211, 165, 14),
 }
+
+.raidButton {
+    padding-top: 5px !important;
+    padding-bottom: 5px !important;
+}
