movedex first time added

--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -1709,3 +1709,7 @@ linkText:hover
     padding-top: 5px !important;
     padding-bottom: 5px !important;
 }
+
+.widthLimit150 {
+    max-width: 120px !important;
+}
