--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -1313,7 +1313,6 @@ body {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     
    width: 200px !important;
-
 }
 .cardHeader {
     border-bottom: 0.5px solid rgba(0, 0, 0, 0.295) ;
@@ -1802,6 +1801,15 @@ body {
     max-height: 220px !important;
     object-fit: contain;
 }
+
+.dexEvoIcon {
+    flex: 1;
+    max-width: 128px !important;
+    max-height: 128px !important;
+    object-fit: contain;
+}
+
+
 .dexIconText {
     max-width: 410px !important;
     //650-240
