--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -1815,14 +1815,14 @@ body {
     //650-240
 }
 
-.dexCardText {
+.dexTitle {
     font-family: 'Baloo Bhaina', cursive;
     font-size: 1.5em;
     font-weight: 600;
 }
 
 .dexFont {
-    font-size: 1.2em;
+    font-size: 1.1em;
     font-weight: 400; 
 }
 .dexFontSm {
