--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -1831,6 +1831,7 @@ body {
 }
 
 .dexStatBack{
+    transition: all 0.4s linear; 
     position: relative;
     max-width: 400px !important; 
     height: 25px !important; 
@@ -1841,6 +1842,7 @@ body {
 }
 
 .dexStatFront {
+    transition: all 0.4s linear; 
     position: absolute;
     height: 100%; 
 
